Updated Bootstrap link

--- a/index.html
+++ b/index.html
@@ -1,58 +1,77 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-us">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-<head>
-  <meta charset="UTF-8">
-  <title>About | Anthony Mahramus</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous" media="screen">
-  <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
-  <link rel="stylesheet" type="text/css" href="assets/css/style2.css">
-</head>
+    <title>About | Anthony Mahramus</title>
 
-<body>
-  <!-- Start of navbar -->
-  <nav class="navbar navbar-default">
-    <div class="container-fluid navbar-custom">
+    <!-- Bootstrap Stylesheet -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
 
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="row">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-            aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <div class="col-xs-12 phone-nav">
-            <a class="navbar-brand" href="#" id="logo">Anthony Mahramus</a>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/style2.css"
+      media="screen"
+    />
+  </head>
+
+  <body>
+    <!-- Start of navbar -->
+    <nav class="navbar navbar-default">
+      <div class="container-fluid navbar-custom">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="row">
+          <div class="navbar-header">
+            <button
+              type="button"
+              class="navbar-toggle collapsed"
+              data-toggle="collapse"
+              data-target="#bs-example-navbar-collapse-1"
+              aria-expanded="false"
+            >
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <div class="col-xs-12 phone-nav">
+              <a class="navbar-brand" href="#" id="logo">Anthony Mahramus</a>
+            </div>
           </div>
-        </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right navbar-right-custom">
-            <li>
-              <a href="contact.html">Contact</a>
-            </li>
-            <li>
-              <a href="portfolio.html">Portfolio</a>
-            </li>
-            <li>
-              <a href="index.html">About</a>
-            </li>
-          </ul>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div
+            class="collapse navbar-collapse"
+            id="bs-example-navbar-collapse-1"
+          >
+            <ul class="nav navbar-nav navbar-right navbar-right-custom">
+              <li>
+                <a href="contact.html">Contact</a>
+              </li>
+              <li>
+                <a href="portfolio.html">Portfolio</a>
+              </li>
+              <li>
+                <a href="index.html">About</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.navbar-collapse -->
         </div>
-        <!-- /.navbar-collapse -->
       </div>
-    </div>
-    <!-- /.container-fluid -->
-  </nav>
-  <!-- End of navbar -->
+      <!-- /.container-fluid -->
+    </nav>
+    <!-- End of navbar -->
 
-
-  <!-- <header id="masthead">
+    <!-- <header id="masthead">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText"
@@ -85,52 +104,74 @@
     </div>
   </header> -->
 
+    <!-- Start of content wrap -->
+    <div class="wrap">
+      <div class="container">
+        <section class="row">
+          <div class="col-md-8">
+            <article class="about-me-content">
+              <h1 class="about-me-header">About Me</h1>
+              <hr class="about-me-hr" />
+              <img
+                src="assets/images/mahramusprofilephoto.jpg"
+                id="anth-image"
+                alt="Anthony Mahramus photo"
+              />
+              <p>
+                I am a 35-year-old digital marketing professional aspiring
+                towards a career in web development. The CWRU Boot Camp has
+                helped push me in the right direction. Or should I say it
+                <em>git pushed</em> me?
+              </p>
 
-  <!-- Start of content wrap -->
-  <div class="wrap">
-    <div class="container">
-      <section class="row">
-        <div class="col-md-8">
-          <article class="about-me-content">
-            <h1 class="about-me-header">About Me</h1>
-            <hr class="about-me-hr" />
-            <img src="assets/images/mahramusprofilephoto.jpg" id="anth-image" alt="Anthony Mahramus photo">
-            <p>I am a 35-year-old digital marketing professional aspiring towards a career in web development. The CWRU Boot
-              Camp has helped push me in the right direction. Or should I say it
-              <em>git pushed</em> me?</p>
-
-            <p>Nevermind. Nobody should say that.</p>
-          </article>
-        </div>
-        <div class="col-md-4">
-
-          <!-- Start of Connect With Me Area -->
-          <section id="connect-with-me-area">
-            <div class="connect-with-me-content">
-              <h1 class="connect-with-me-header">Connect With Me</h1>
-              <hr />
-              <div id="images">
-                <a href="https://github.com/mahramus" target="_blank">
-                  <img src="assets/images/github-128.png" alt="GitHub" class="connect-with-me-photo">
-                </a>
-                <a href="https://www.linkedin.com/in/anthonymahramus" target="_blank">
-                  <img src="assets/images/linkedin-128.png" alt="LinkedIn" class="connect-with-me-photo">
-                </a>
-                <a href="https://stackoverflow.com/users/9104340/anthony-mahramus?tab=profile" target="_blank">
-                  <img src="assets/images/stackoverflow-128.png" alt="Stack Overflow" class="connect-with-me-photo">
-                </a>
+              <p>Nevermind. Nobody should say that.</p>
+            </article>
+          </div>
+          <div class="col-md-4">
+            <!-- Start of Connect With Me Area -->
+            <section id="connect-with-me-area">
+              <div class="connect-with-me-content">
+                <h1 class="connect-with-me-header">Connect With Me</h1>
+                <hr />
+                <div id="images">
+                  <a href="https://github.com/mahramus" target="_blank">
+                    <img
+                      src="assets/images/github-128.png"
+                      alt="GitHub"
+                      class="connect-with-me-photo"
+                    />
+                  </a>
+                  <a
+                    href="https://www.linkedin.com/in/anthonymahramus"
+                    target="_blank"
+                  >
+                    <img
+                      src="assets/images/linkedin-128.png"
+                      alt="LinkedIn"
+                      class="connect-with-me-photo"
+                    />
+                  </a>
+                  <a
+                    href="https://stackoverflow.com/users/9104340/anthony-mahramus?tab=profile"
+                    target="_blank"
+                  >
+                    <img
+                      src="assets/images/stackoverflow-128.png"
+                      alt="Stack Overflow"
+                      class="connect-with-me-photo"
+                    />
+                  </a>
+                </div>
               </div>
-            </div>
-          </section>
-          <!-- End of the Connect With Me Area -->
-
-        </div>
-      </section>
+            </section>
+            <!-- End of the Connect With Me Area -->
+          </div>
+        </section>
+      </div>
     </div>
-  </div>
-  <!-- End of content wrap -->
+    <!-- End of content wrap -->
 
-  <!-- <div id="main-container" class="container">
+    <!-- <div id="main-container" class="container">
     <section class="main-section">
       <h1>About Me</h1>
 
@@ -161,18 +202,13 @@
     </section>
   </div> -->
 
-  <!-- Start of footer -->
-  <footer class="footer">
-    <div class="two-toned-footer-color"></div>
-    <p class="text-muted text-muted-footer text-center">
-      Copyright &copy; 2018 Anthony Mahramus
-    </p>
-  </footer>
-  <!-- End of footer -->
-
-
-
-
-</body>
-
+    <!-- Start of footer -->
+    <footer class="footer">
+      <div class="two-toned-footer-color"></div>
+      <p class="text-muted text-muted-footer text-center">
+        Copyright &copy; 2018 Anthony Mahramus
+      </p>
+    </footer>
+    <!-- End of footer -->
+  </body>
 </html>
