--- a/index-old.html
+++ b/index-old.html
@@ -7,16 +7,20 @@
 
     <title>About | Anthony Mahramus</title>
 
-    <!-- Boostrap Stylesheet -->
+    <!-- Bootstrap Stylesheet -->
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
 
-    <!-- Our own CSS stylesheet -->
-    <link rel="stylesheet" href="assets/css/styles.css" media="screen" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/style2.css"
+      media="screen"
+    />
   </head>
 
   <body>
@@ -49,9 +53,15 @@
             id="bs-example-navbar-collapse-1"
           >
             <ul class="nav navbar-nav navbar-right navbar-right-custom">
-              <li><a href="contact.html">Contact</a></li>
-              <li><a href="portfolio.html">Portfolio</a></li>
-              <li><a href="index.html">About</a></li>
+              <li>
+                <a href="contact.html">Contact</a>
+              </li>
+              <li>
+                <a href="portfolio.html">Portfolio</a>
+              </li>
+              <li>
+                <a href="index.html">About</a>
+              </li>
             </ul>
           </div>
           <!-- /.navbar-collapse -->
@@ -132,7 +142,7 @@
     <footer class="footer">
       <div class="two-toned-footer-color"></div>
       <p class="text-muted text-muted-footer text-center">
-        &copy; Copyright 2018 Anthony Mahramus
+        Copyright &copy; 2018 Anthony Mahramus
       </p>
     </footer>
     <!-- End of footer -->
@@ -145,8 +155,8 @@
 
     <!-- Bootstrap CDN -->
     <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-      integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
   </body>
